added basename to Router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://bhavyasree200359.github.io/ecommerce-website",
   "name": "ecommerce-website",
   "version": "0.1.0",
   "private": true,
